[package]
name = "miller_rabin"
description = "A multi-threaded, arbitrary precision implementation of the Miller-Rabin primality test."
version = "1.1.0"

authors = ["cjayross <calvinjayross@gmail.com>"]
edition = "2018"

repository = "https://github.com/cjayross/miller_rabin"
documentation = "https://docs.rs/miller_rabin/1.0.4/miller_rabin"

license = "MIT"
keywords = ["miller", "rabin", "prime", "primality", "test"]
categories = ["cryptography", "mathematics"]

[dependencies]
rayon = { version = "1.2.1", optional = true }
rand = "0.8"
num-traits = "0.2"
num-integer = "0.1"

[dependencies.num-bigint]
version = "0.4"
features = ["rand"]

[features]
default = ["rayon"]